fix artist image looking squished

--- a/react-app/src/components/ArtistCard/ArtistCard.css
+++ b/react-app/src/components/ArtistCard/ArtistCard.css
@@ -11,6 +11,7 @@
 .artist-img {
   width: 100%;
   height: 75%;
+  object-fit: cover;
 }
 
 .artist-header {
